# Calcu-rs

./: .gitignore  Cargo.toml  README.md  clippy.toml  graph.dot  rustfmt.toml  ¨
.github/workflows/: rust.yml
benches/: basic_bench.rs
internals/src/: lib.rs
macros/: Cargo.toml
macros/src/: calcurs_scope.rs  lib.rs  macro_scope.rs  parsers.rs  rubi.m  rubi.rs  utils.rs
src/: abstract_alg.rs  algos.rs  atom.rs  base.rs  binop.rs  boolean.rs  constants.rs  core.rs  derivative.rs  e_graph.rs  egraph.rs  expr.rs  expression.rs  fmt_ast.rs  lib.rs  main.rs  numbers.rs  numeric.rs  operator.rs  operator2.rs  pattern.rs  polynomial.rs  rational.rs  rubi.rs  rules.rs  scalar.rs  sym_fmt.rs  tests.rs  traits.rs  transforms.rs  types.rs  util.rs  utils.rs  visitor.rs
src/boolean/: algorithms.rs  mod.rs
src/egraph/: LICENSE  README  README.md  construct.rs  dot.rs  egraph.rs  explain.rs  language.rs  machine.rs  mod.rs  multipattern.rs  pattern.rs  rewrite.rs  run.rs
