[package]
name = "calcu_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# bitflags = "2.4.1"
calcurs_macros = { path = "macros" }

smallvec = "1.13.2"
indexmap = "2.2.6"
fxhash = "0.2.1"

malachite = "0.4.7"
num = "0.4.3"
num-bigint = "0.4"
num-traits = "0.2"

env_logger = "0.11.3"
log = "0.4.17"
paste = "1.0.15"
quanta = "0.12.3"
symbol_table = { version = "0.3.0", features = ["global"] }
bitflags = "2.6.0"

[dev-dependencies]
test-case = "3.3.1"

[features]
# forces the use of indexmaps over hashmaps
# deterministic = []
