[package]
name = "calcu-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
calcurs_macros = { path = "macros" }
bitflags = "2.6.0"
malachite = "0.4.15"
fxhash = "0.2.1"
ref-cast = "1.0.23"
num = "0.4.3"
log = "0.4.22"
env_logger = "0.11.5"
ordered-float = "4.2.2"
quanta = "0.12.3"
paste = "1.0.15"
num-integer = "0.1.46"
derive_more = { version="1.0.0", features=["from", "into", "debug", "display", "add", "mul", "sum", "add_assign", "mul_assign", "is_variant", "unwrap", "try_unwrap"] }

[lints.clippy]
upper_case_acronyms = "allow"
