[package]
name = "calcurs_macros"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
derive_more = { version="1.0.0", features = ["debug", "display"] }
logos = "0.14.1"
ordered-float = { version = "4.2.2", features = ["serde"] }
proc-macro2 = "1.0.78"
quote = "1.0.35"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
syn = { version = "2.0.50", features = ["full", "extra-traits", "parsing"] }

